--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    font-family: 'Exo', sans-serif;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+}
+
+footer {
+    text-align: center;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    line-height: 40px;
+}
