--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -10,21 +10,20 @@
         <div class="form-group row">
             <label class="col-2 col-form-label">Email</label>
             <div class="col-8">
-                <input class="form-control" type="email" placeholder="Email" name="email">
-
+                <input class="form-control" type="email" placeholder="Email" name="email" [(ngModel)]="strEmail">
             </div>
         </div>
 
         <div class="form-group row">
             <label class="col-2 col-form-label">Password</label>
             <div class="col-8">
-                <input class="form-control" type="password" placeholder="Password" name="password">
+                <input class="form-control" type="password" placeholder="Password" name="password" [(ngModel)]="strPassword">
             </div>
         </div>
         <div class="form-group row">
             <label class="col-2 col-form-label">&nbsp;</label>
             <div class="input-group col-md-8">
-                <button type="submit" class="btn btn-outline-success btn-block">
+                <button type="submit" class="btn btn-outline-success btn-block" (click)="ingresar()">
                         Sign in
                     </button>
             </div>
