--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -8,9 +8,9 @@
     <hr>
     <form autocomplete="off">
         <div class="form-group row">
-            <label class="col-2 col-form-label">Email</label>
+            <label class="col-2 col-form-label">Identification</label>
             <div class="col-8">
-                <input class="form-control" type="email" placeholder="Email" name="email" [(ngModel)]="strEmail">
+                <input class="form-control" type="number" placeholder="Identification" name="identification" [(ngModel)]="strIdentification">
             </div>
         </div>
 
