--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer bg-primary">
     <div class="container">
         <p class="text-white">
-            Derechos Reservados &copy; {{anio}} {{autor}}
+            &copy; {{anio}} {{strAutor}}
         </p>
     </div>
 </footer>
