Registro y recuperar contra

--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,5 +1,5 @@
 <body>
-    <div class="container mt-5">
+    <div class="container wrapper">
         <div class="card text-center">
             <div class="card-header">
                 <h1 class="text-center mb-2">{{strTitle}}</h1>
@@ -8,7 +8,7 @@
                 <form>
                     <div class="row">
                         <div class="offset-lg-4 offset-xl-4"></div>
-                        <label class="col-auto">Identification</label>
+                        <label class="col-auto">Identification number</label>
                     </div>
                     <div class="row form-group">
                         <div class="offset-4"></div>
@@ -40,7 +40,13 @@
                 <div class="row form-group mb-0">
                     <div class=" offset-lg-4 offset-xl-4"></div>
                     <div class="input-group col-md-4">
-                        <a class="btn btn-block" routerLink="/register">Forgot password?</a>
+                        <a class="btn btn-block" routerLink="/register">Sign up</a>
+                    </div>
+                </div>
+                <div class="row form-group mb-0">
+                    <div class=" offset-lg-4 offset-xl-4"></div>
+                    <div class="input-group col-md-4">
+                        <a class="btn btn-block" routerLink="/restorePassword">Forgot password</a>
                     </div>
                 </div>
             </div>
