--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 * {
-    font-family: 'Exo', sans-serif;
+    font-family: 'Kanit', sans-serif;
+    /* background-image: url(assets/fondo.jpg); */
 }
 
 body {
