--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -13,7 +13,7 @@
                     <div class="row form-group">
                         <div class="offset-4"></div>
                         <div class="col-12 col-lg-4 col-xl-4">
-                            <select name="tIdentificacion" id="tIdentificacion" #tIdentificacion class="form-control" [(ngModel)]="patient.identificationType" required>
+                            <select name="tIdentificacion" id="tIdentificacion" #tIdentificacion class="form-control" required>
                                 <option *ngFor="let idT of idType; let i = index" [value]="idT.id">
                                     {{idT.name}}                            
                                 </option>
@@ -27,7 +27,7 @@
                     <div class="row form-group ">
                         <div class="offset-4"></div>
                         <div class="col-12 col-lg-4 col-xl-4">
-                            <input type="number" name="nIdentificacion" id="nIdentificacion" #nIdentificacion placeholder="Identification number" class="form-control" [(ngModel)]="patient.patientIdentification" required>
+                            <input type="number" name="nIdentificacion" id="nIdentificacion" #nIdentificacion placeholder="Identification number" class="form-control" [(ngModel)]="rol.userIdentification" required>
                         </div>
                     </div>
                     <div class="row">
@@ -38,7 +38,7 @@
                     <div class="row form-group ">
                         <div class="offset-4"></div>
                         <div class="col-12 col-lg-4 col-xl-4">
-                            <input type="email" name="email" id="email" #email placeholder="Email" class="form-control" [(ngModel)]="patient.email" required>
+                            <input type="email" name="email" id="email" #email placeholder="Email" class="form-control" [(ngModel)]="rol.email" required>
                         </div>
                     </div>
                     <div class="row">
@@ -49,7 +49,7 @@
                     <div class="row form-group ">
                         <div class="offset-4"></div>
                         <div class="col-12 col-lg-4 col-xl-4">
-                            <input type="password" name="password" id="password" #password placeholder="Password" class="form-control" [(ngModel)]="patient.password" required>
+                            <input type="password" name="password" id="password" #password placeholder="Password" class="form-control" [(ngModel)]="rol.password" required>
                         </div>
                     </div>
                     <div class="row">
@@ -60,7 +60,7 @@
                     <div class="row form-group ">
                         <div class="offset-4"></div>
                         <div class="col-12 col-lg-4 col-xl-4">
-                            <select name="ciudad" id="ciudad" #ciudad class="form-control" [(ngModel)]="patient.cityId_City" required>
+                            <select name="ciudad" id="ciudad" #ciudad class="form-control" required>
                                 <option *ngFor="let cityName of cities" [value]="cityName.cityId">
                                     {{cityName.description}}
                                 </option>
@@ -75,7 +75,7 @@
                     <div class="row form-group ">
                         <div class="offset-4"></div>
                         <div class="col-12 col-lg-4 col-xl-4">
-                            <select name="eps" id="eps" #eps class="form-control" [(ngModel)]="patient.epsId_Eps" required>
+                            <select name="eps" id="eps" #eps class="form-control" required>
                                 <option *ngFor="let epsName of epsArray" [value]="epsName.epsId">
                                     {{epsName.epsName}}
                                 </option>
@@ -85,8 +85,8 @@
                     <div class="row form-group">
                         <div class="offset-lg-4 offset-xl-4"></div>
                         <div class="input-group col-md-4">
-                            <button type="submit" class="btn btn-primary btn-block" (click)="registrarPaciente()">
-                                Sign in
+                            <button type="submit" class="btn btn-primary btn-block" (click)="register(tIdentificacion.value,ciudad.value,eps.value)">
+                                Sign up
                             </button>
                         </div>
                     </div>
