--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-primary">
+<footer class="footer bg-main">
     <div class="container">
         <p class="text-white">
             &copy; {{anio}} {{strAutor}}
