--- a/src/styles.css
+++ b/src/styles.css
@@ -12,10 +12,14 @@ body {
 
 footer {
     text-align: center;
-    position: fixed;
+    position: absolute;
     bottom: 0px;
     width: 100%;
     height: 40px;
     font-size: 14px;
     line-height: 40px;
+}
+
+.bg-main {
+    background-color: #737CD5;
 }
