--- a/src/styles.css
+++ b/src/styles.css
@@ -11,15 +11,19 @@ body {
 }
 
 footer {
+    color: white;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     width: 100%;
-    height: 40px;
-    font-size: 14px;
-    line-height: 40px;
+    height: 30px;
+    line-height: 30px;
 }
 
 .bg-main {
-    background-color: #737CD5;
+    background-color: #7386D5;
+}
+
+.color-main {
+    color: #6d7fcc;
 }
