--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,36 +1,45 @@
-<body>
-    <div class="container wrapper">
+<body class="d-flex justify-content-center ">
+    <div class="container align-self-center">
         <div class="card text-center">
             <div class="card-header">
                 <h1 class="text-center mb-2">{{strTitle}}</h1>
             </div>
             <div class="card-body">
-                <form>
+                <form autocomplete="off" [formGroup]="formLogin" (ngSubmit)="ingresar()">
                     <div class="row">
                         <div class="offset-lg-4 offset-xl-4"></div>
-                        <label class="col-auto">Identification number</label>
+                        <label class="col-auto">Número de identificación</label>
                     </div>
                     <div class="row form-group">
                         <div class="offset-4"></div>
                         <div class="col-12 col-lg-4 col-xl-4">
-                            <input class="form-control" type="number" placeholder="Identification" name="identification" [(ngModel)]="strIdentification">
+                            <input class="form-control" type="text" placeholder="Número de identificación" [(ngModel)]="strIdentification" [class.is-invalid]="nIdentificacionNoValido" formControlName="nIdentificacion">
+                            <div class="text-left">
+                                <small *ngIf="nIdentificacionNoValido" class="text-danger ">Ingrese un número de identificación</small>
+                            </div>
                         </div>
+
+
                     </div>
                     <div class="row">
                         <div class="offset-lg-4 offset-xl-4"></div>
-                        <label class="col-auto">Password</label>
+                        <label class="col-auto">Contraseña</label>
                     </div>
                     <div class="row form-group ">
                         <div class="offset-4"></div>
                         <div class="col-12 col-lg-4 col-xl-4">
-                            <input class="form-control" type="password" placeholder="Password" name="password" [(ngModel)]="strPassword">
+                            <input class="form-control" type="password" placeholder="Contraseña" name="password" [(ngModel)]="strPassword" formControlName="password" [class.is-invalid]="passNoValido">
+                            <div class="text-left">
+                                <small *ngIf="passNoValido" class="text-danger ">Ingrese una contraseña</small>
+                            </div>
                         </div>
+
                     </div>
                     <div class="row form-group">
                         <div class="offset-lg-4 offset-xl-4"></div>
                         <div class="input-group col-md-4">
-                            <button type="submit" class="btn btn-primary btn-block" (click)="ingresar()">
-                                Sign in
+                            <button type="submit" class="btn bg-main btn-block text-white">
+                                Ingresar
                             </button>
                         </div>
                     </div>
@@ -40,16 +49,16 @@
                 <div class="row form-group mb-0">
                     <div class=" offset-lg-4 offset-xl-4"></div>
                     <div class="input-group col-md-4">
-                        <a class="btn btn-block" routerLink="/register">Sign up</a>
+                        <a class="btn btn-block color-main" routerLink="/register">Registrarse</a>
                     </div>
                 </div>
                 <div class="row form-group mb-0">
                     <div class=" offset-lg-4 offset-xl-4"></div>
                     <div class="input-group col-md-4">
-                        <a class="btn btn-block" routerLink="/restorePassword">Forgot password</a>
+                        <a class="btn btn-block color-main" routerLink="/restorePassword">¿Olvido su contraseña?</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</body>
+</body>`
