Modulo pacientes-admin

--- a/src/app/admin/components/admin-principal/admin-principal.component.html
+++ b/src/app/admin/components/admin-principal/admin-principal.component.html
@@ -6,58 +6,42 @@
         </div>
 
         <ul class="list-unstyled components">
-            <li class="">
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
-                <ul class="collapse list-unstyled" id="homeSubmenu">
-                    <li>
-                        <a routerLink="/admin-principal/home">Home 1</a>
-                    </li>
-                    <li>
-                        <a href="#">Home 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Home 3</a>
-                    </li>
-                </ul>
+            <li>
+                <a routerLink="/admin-principal/home">Home</a>
             </li>
             <li>
-                <a routerLink="/admin-principal/index">About</a>
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-                <ul class="collapse list-unstyled" id="pageSubmenu">
-                    <li>
-                        <a href="#">Page 1</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 3</a>
-                    </li>
-                </ul>
+                <a routerLink="/admin-principal/patient-admin">Pacientes</a>
             </li>
             <li>
-                <a href="#">Portfolio</a>
+                <a routerLink="/admin-principal/doctor-admin">Doctores</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a routerLink="/admin-principal/entidades-admin">Entidades</a>
+            </li>
+            <li>
+                <a routerLink="/admin-principal/products-admin">Productos</a>
+            </li>
+            <li>
+                <a routerLink="/admin-principal/settings-admin">Configuración</a>
+            </li>
+            <li>
+                <a routerLink="login">Salir</a>
             </li>
         </ul>
     </nav>
 
     <!-- Page Content Holder -->
     <div id="content">
-
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-
                 <button type="button" id="sidebarCollapse" class="navbar-btn">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </button>
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
                 <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
-                    </button>
+          <i class="fas fa-align-justify"></i>
+        </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
